--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
+    aaptOptions {
+     cruncherEnabled = false
+     useNewCruncher = false
+    }
+
     defaultConfig {
         applicationId "com.app.yangyang.zhbj"
         minSdkVersion 17
@@ -27,5 +33,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:25.3.0'
-    compile project(':library')
+    compile project(':SlidingMenuLibrary')
 }
